section hero + responsiviness

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div>
-            <img src="./assets/img/logo-colored-no-text.png" alt="Logo da Onitour">
+            <img src="./assets/img/logo-colored-no-text.svg" alt="Logo da Onitour">
             <h1><span class="blue-span">ONI</span>TOUR</h1>
         </div>
 
@@ -29,11 +29,89 @@
             </ul>
         </nav>
 
-        <div class="header-menu">
-            <i class="ph-fill ph-dots-three-outline-vertical"></i>
-            <i class="ph-fill ph-user-circle"></i>
+        <div>
+            <i class="ph-fill ph-dots-three-outline-vertical" id="menu-icon"></i>
+            <i class="ph-fill ph-user-circle" id="login-icon"></i>
         </div>
     </header>
 
+    <main>
+        <section class="hero-section">
+            <div class="content">
+                <div class="hero-text">
+                    <h2>SUA VIAGEM SOB MEDIDA, <br/><span class="blue-span">DO INICIO AO FIM</span></h2>
+                    <p>Organize viagens de forma rápida, prática e sem estresse. A Onitour conecta você às melhores empresas de transporte para sua turma, equipe ou grupo.</p>
+                    <button><img src="./assets/img/logo-white-no-text.svg">Quero Touristar Agora</button>
+                </div>
+                <img src="./assets/img/onitour-landing-page.svg" alt="Ilustração de mulher planejando sua viagem com a OniTour">
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <h2>O problema que solucionamos</h2>
+                <p>Planejar uma viagem em grupo pode ser um caos - falta de informação, dificuldade para encontrar ônibus disponíveis e preços pouco claros. Criamos uma solução que soluciona essa dor de cabeça.</p>
+            </div>
+             <div>
+                <h2>Nosssa proposta de valor</h2>
+                <p>Nossa ferramenta facilita toda a etapa antes da viagem: simples, rápida e confortável. Aqui, você encontra opções confiáveis de transporte e cuida de tudo em poucos cliques.</p>
+            </div>
+        </section>
+           
+        <section>
+            <h2>Planejar a sua viagem com a Onitour é fácil</h2>
+            <div>
+                <span>
+                    <i class="ph-fill ph-map-pin-area"></i>
+                </span>
+                <h3>Diga aonde quer ir</h3>
+                <p>Escolha o destino e a data. Em segundos, mostramos as melhores opções para o seu grupo.</p>
+            </div>
+
+             <div>
+                <span>
+                    <i class="ph-fill ph-users-three"></i>
+                </span>
+                <h3>Veja o valor por pessoa</h3>
+                <p>Transparência total: você sabe exatamente quanto cada passageiro vai pagar antes mesmo de reservar.</p>
+            </div>
+
+            <div>
+                <span>
+                    <i class="ph-bold ph-magnifying-glass"></i>
+                </span>
+                <h3>Compare e escolha</h3>
+                <p>Empresas avaliadas, veículos confortáveis e valores acessíveis - tudo apresentado de forma clara para você decidir sem dúvidas.</p>
+            </div>
+
+            <div>
+                <span>
+                   <i class="ph-fill ph-bus"></i>
+                </span>
+                <h3>Garanta a sua viagem</h3>
+                <p>Finalize online e receba todas as informações na hora. Sem burocracia, sem ligações, sem complicação.</p>
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <h2>Por que confiar na Onitour?</h2>
+                <p> Na Onitour, sua tranquilidade é prioridade. Todos os fornecedores de transporte (ônibus, vans e micro-ônibus) são empresas cadastradas e avaliadas constantemente.</p>
+                <p><i class="ph-fill ph-lock-key"></i>Segurança comprovada</p>
+                <p><i class="ph-fill ph-star-four"></i>Avaliação dos clientes</p>
+                <p><i class="ph-fill ph-rocket-launch"></i>Embarque rápido</p>
+            </div>
+
+            <div>
+                <img src="" alt="turistas-viajando">
+            </div>
+        </section>
+
+        <section>
+            <h2>Pronto para planejar a viagem perfeita?</h2>
+            <p>Garanta a melhor opção de transporte para o seu grupo com segurança e a praticidade que só a Onitour oferece.</p>
+            <button>Quero Touristar agora</button>
+        </section>
+    </main>
 </body>
 </html>
