value section + responsiviness

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             </div>
         </section>
 
-        <section>
-            <div>
-                <h2>O problema que solucionamos</h2>
+        <section class="value-section">
+            <div id="problem">
+                <h2>O problema que <br/><span class="blue-span">solucionamos</span></h2>
                 <p>Planejar uma viagem em grupo pode ser um caos - falta de informação, dificuldade para encontrar ônibus disponíveis e preços pouco claros. Criamos uma solução que soluciona essa dor de cabeça.</p>
             </div>
              <div>
-                <h2>Nosssa proposta de valor</h2>
+                <h2>Nossa proposta <br/><span class="blue-span">de valor</span></h2>
                 <p>Nossa ferramenta facilita toda a etapa antes da viagem: simples, rápida e confortável. Aqui, você encontra opções confiáveis de transporte e cuida de tudo em poucos cliques.</p>
             </div>
         </section>
