planning section + responsiviness

--- a/index.html
+++ b/index.html
@@ -58,38 +58,37 @@
             </div>
         </section>
            
-        <section>
-            <h2>Planejar a sua viagem com a Onitour é fácil</h2>
-            <div>
-                <span>
-                    <i class="ph-fill ph-map-pin-area"></i>
-                </span>
-                <h3>Diga aonde quer ir</h3>
-                <p>Escolha o destino e a data. Em segundos, mostramos as melhores opções para o seu grupo.</p>
-            </div>
-
-             <div>
-                <span>
-                    <i class="ph-fill ph-users-three"></i>
-                </span>
-                <h3>Veja o valor por pessoa</h3>
-                <p>Transparência total: você sabe exatamente quanto cada passageiro vai pagar antes mesmo de reservar.</p>
-            </div>
-
-            <div>
-                <span>
-                    <i class="ph-bold ph-magnifying-glass"></i>
-                </span>
-                <h3>Compare e escolha</h3>
-                <p>Empresas avaliadas, veículos confortáveis e valores acessíveis - tudo apresentado de forma clara para você decidir sem dúvidas.</p>
-            </div>
-
-            <div>
-                <span>
-                   <i class="ph-fill ph-bus"></i>
-                </span>
-                <h3>Garanta a sua viagem</h3>
-                <p>Finalize online e receba todas as informações na hora. Sem burocracia, sem ligações, sem complicação.</p>
+        <section class="planning-section">
+            <h2>Planejar a sua viagem com <br><span class="blue-span">a Onitour é fácil</span></h2>
+            <div class="grid-container">
+                <div>
+                    <span class="green-icon">
+                        <i class="ph-fill ph-map-pin-area"></i>
+                    </span>
+                    <h3 class="green-title">Diga aonde quer ir</h3>
+                    <p>Escolha o destino e a data. Em segundos, mostramos as melhores opções para o seu grupo.</p>
+                </div>
+                <div>
+                    <span class="blue-icon">
+                        <i class="ph-fill ph-magnifying-glass"></i>
+                    </span>
+                    <h3 class="blue-title">Compare e escolha</h3>
+                    <p>Empresas avaliadas, veículos confortáveis e valores acessíveis - tudo apresentado de forma clara para você decidir sem dúvidas.</p>
+                </div>
+                 <div>
+                    <span class="blue-icon">
+                        <i class="ph-fill ph-users-three"></i>
+                    </span>
+                    <h3 class="blue-title">Veja o valor por pessoa</h3>
+                    <p>Transparência total: você sabe exatamente quanto cada passageiro vai pagar antes mesmo de reservar.</p>
+                </div>
+                <div>
+                    <span class="green-icon">
+                       <i class="ph-fill ph-bus"></i>
+                    </span>
+                    <h3 class="green-title">Garanta a sua viagem</h3>
+                    <p>Finalize online e receba todas as informações na hora. Sem burocracia, sem ligações, sem complicação.</p>
+                </div>
             </div>
         </section>
 
