--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/responsiviness.css">
 
-    <title>OniTour</title>
+    <title>OniTour - Sua viagem sob medida, do início ao fim</title>
 </head>
 <body>
     <header>
@@ -24,7 +24,7 @@
         <nav>
             <ul>
                 <li><a href="./detalhes.html">Excursões</a></li>
-                <li><a href="#">Aluguéis de ônibus</a></li>
+                <li><a href="#">Aluguéis</a></li>
                 <li><a href="#">Hospedagem</a></li>
             </ul>
         </nav>
@@ -59,7 +59,7 @@
         </section>
            
         <section class="planning-section">
-            <h2>Planejar a sua viagem com <br><span class="blue-span">a Onitour é fácil</span></h2>
+            <h2>Planejar a sua viagem com <br/><span class="blue-span">a Onitour é fácil</span></h2>
             <div class="grid-container">
                 <div>
                     <span class="green-icon">
@@ -92,18 +92,18 @@
             </div>
         </section>
 
-        <section>
-            <div>
-                <h2>Por que confiar na Onitour?</h2>
+        <section class="reasons-section">
+            <div class="reasons-content">
+                <h2>Por que confiar <br/><span class="blue-span">na Onitour?</span></h2>
                 <p> Na Onitour, sua tranquilidade é prioridade. Todos os fornecedores de transporte (ônibus, vans e micro-ônibus) são empresas cadastradas e avaliadas constantemente.</p>
-                <p><i class="ph-fill ph-lock-key"></i>Segurança comprovada</p>
-                <p><i class="ph-fill ph-star-four"></i>Avaliação dos clientes</p>
-                <p><i class="ph-fill ph-rocket-launch"></i>Embarque rápido</p>
+                <div>
+                    <p><i class="ph-fill ph-lock-key"></i>Segurança comprovada</p>
+                    <p><i class="ph-fill ph-star-four"></i>Avaliação dos clientes</p>
+                    <p><i class="ph-fill ph-rocket-launch"></i>Embarque rápido</p>
+                </div>
             </div>
-
-            <div>
-                <img src="" alt="turistas-viajando">
-            </div>
+            
+            <img src="./assets/img/friends-travelling.png" alt="Foto de turistas aproveitando uma viagem">
         </section>
 
         <section>
