catching section + footer HTML

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="hero-text">
                     <h2>SUA VIAGEM SOB MEDIDA, <br/><span class="blue-span">DO INICIO AO FIM</span></h2>
                     <p>Organize viagens de forma rápida, prática e sem estresse. A Onitour conecta você às melhores empresas de transporte para sua turma, equipe ou grupo.</p>
-                    <button><img src="./assets/img/logo-white-no-text.svg">Quero Touristar Agora</button>
+                    <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg">Vamos Touristar</button>
                 </div>
                 <img src="./assets/img/onitour-landing-page.svg" alt="Ilustração de mulher planejando sua viagem com a OniTour">
             </div>
@@ -106,11 +106,41 @@
             <img src="./assets/img/friends-travelling.png" alt="Foto de turistas aproveitando uma viagem">
         </section>
 
-        <section>
-            <h2>Pronto para planejar a viagem perfeita?</h2>
+        <section class="catching-section">
+            <h2>Pronto para planejar <span class="blue-span">a viagem perfeita?</span></h2>
             <p>Garanta a melhor opção de transporte para o seu grupo com segurança e a praticidade que só a Onitour oferece.</p>
-            <button>Quero Touristar agora</button>
+            <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg">Quero Touristar agora</button>
         </section>
     </main>
+
+    <footer>
+        <img src="./assets/img/logo-white-text.svg" alt="Logo da Onitour">
+        <h2>Sua viagem sob medida, do início ao fim.</h2>
+        <nav>
+            <ul>
+                <li>Início</li>
+                <li>Excursões</li>
+                <li>Aluguéis de Ônibus</li>
+                <li>Hospedagem</li>
+            </ul>
+        </nav>
+        <nav>
+            <ul>
+                <li>Escolha do dia</li>
+                <li>Promoções semanais</li>
+                <li>Planeje sua viagem</li>
+                <li>Pacote Férias</li>
+            </ul>
+        </nav>
+
+        <div>
+            <p>2024 © Todos os direitos reservados - OniTour</p>
+            <p>Contate-nos!</p>
+            <span>
+                <i class="ph-fill ph-linkedin-logo"></i>
+                <i class="ph-fill ph-instagram-logo"></i>
+            </span>
+        </div>
+    </footer>
 </body>
 </html>
