--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>OniTour - Sua viagem sob medida, do início ao fim</title>
 </head>
 <body>
-    <header>
+    <header id="inicio">
         <div>
             <img src="./assets/img/logo-colored-no-text.svg" alt="Logo da Onitour">
             <h1><span class="blue-span">ONI</span>TOUR</h1>
@@ -114,31 +114,50 @@
     </main>
 
     <footer>
-        <img src="./assets/img/logo-white-text.svg" alt="Logo da Onitour">
-        <h2>Sua viagem sob medida, do início ao fim.</h2>
-        <nav>
-            <ul>
-                <li>Início</li>
-                <li>Excursões</li>
-                <li>Aluguéis de Ônibus</li>
-                <li>Hospedagem</li>
-            </ul>
-        </nav>
-        <nav>
-            <ul>
-                <li>Escolha do dia</li>
-                <li>Promoções semanais</li>
-                <li>Planeje sua viagem</li>
-                <li>Pacote Férias</li>
-            </ul>
-        </nav>
+        <div class="footer-menu">
+            <img src="./assets/img/logo-white-text.svg" alt="Logo da Onitour">
+            <p>Sua viagem sob medida, do início ao fim.</p>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#inicio">Início</a>
+                    </li>
+                    <li>
+                        <a href="./detalhes.html">Excursões</a>
+                    </li>
+                    <li>
+                        <a href="#">Aluguéis de Ônibus</a>
+                    </li>
+                    <li>
+                        <a href="#">Hospedagem</a>
+                    </li>
+                </ul>
+            </nav>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">Escolha do dia</a>
+                    </li>
+                    <li>
+                        <a href="#">Promoções semanais</a>
+                    </li>
+                    <li>
+                        <a href="#">Planeje sua viagem</a>
+                    </li>
+                    <li>
+                        <a href="#">Pacote Férias</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
 
-        <div>
+        <div class="attribution">
             <p>2024 © Todos os direitos reservados - OniTour</p>
-            <p>Contate-nos!</p>
+            
             <span>
-                <i class="ph-fill ph-linkedin-logo"></i>
-                <i class="ph-fill ph-instagram-logo"></i>
+                <p>Contate-nos!</p>
+                <a href="https://linkedin.com"><i class="ph-fill ph-linkedin-logo"></i></a>
+                <a href="https://instagram.com"><i class="ph-fill ph-instagram-logo"></i></a>
             </span>
         </div>
     </footer>
