upper menu + grid not finished

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=League+Gothic&family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/responsiviness.css">
+    <link rel="shortcut icon" href="./assets/icon/favicon.ico" type="image/x-icon">
 
     <title>OniTour - Sua viagem sob medida, do início ao fim</title>
 </head>
@@ -41,7 +42,7 @@
                 <div class="hero-text">
                     <h2>SUA VIAGEM SOB MEDIDA, <br/><span class="blue-span">DO INICIO AO FIM</span></h2>
                     <p>Organize viagens de forma rápida, prática e sem estresse. A Onitour conecta você às melhores empresas de transporte para sua turma, equipe ou grupo.</p>
-                    <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg">Vamos Touristar</button>
+                    <a href="./detalhes.html" class="touristing-button"><img src="./assets/img/logo-white-no-text.svg">Vamos Touristar</a>
                 </div>
                 <img src="./assets/img/onitour-landing-page.svg" alt="Ilustração de mulher planejando sua viagem com a OniTour">
             </div>
@@ -109,7 +110,7 @@
         <section class="catching-section">
             <h2>Pronto para planejar <span class="blue-span">a viagem perfeita?</span></h2>
             <p>Garanta a melhor opção de transporte para o seu grupo com segurança e a praticidade que só a Onitour oferece.</p>
-            <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg">Quero Touristar agora</button>
+            <a href="./detalhes.html" class="touristing-button"><img src="./assets/img/logo-white-no-text.svg">Quero Touristar agora</a>
         </section>
     </main>
 
