upper menu + css

--- a/detalhes.html
+++ b/detalhes.html
@@ -37,18 +37,21 @@
     </header>
 
     <main>
-        <section>
+        <section class="menu-section">
             <nav class="top-menu">
                 <ul>
-                    <li><a href="#">Escolha do dia</a></li>
-                    <li><a href="#">Promoções semanais</a></li>
-                    <li><a href="#">Planeje sua viagem</a></li>
-                    <li><a href="#">Pacote Férias</a></li>
+                    <li><button>Escolha do dia</button></li>
+                    <li><button>Promoções semanais</button></li>
+                    <li><button>Planeje sua viagem</button></li>
+                    <li><button>Pacote Férias</button></li>
                 </ul>
             </nav>
         </section>
 
-        <section>
+    <!--
+        <section class="excursions-section">
+            <h2>Nossas <span class="blue-span">Excursões</span></h2>
+
             <div class="grid-container">
                 <div class="card" id="morro-branco">
                     <img src="./assets/img/morro-branco.png" alt="Praia de Morro Branco">
@@ -132,5 +135,6 @@
             </span>
         </div>
     </footer>
+    -->
 </body>
 </html>
