--- a/detalhes.html
+++ b/detalhes.html
@@ -48,40 +48,37 @@
             </nav>
         </section>
 
-    <!--
-        <section class="excursions-section">
-            <h2>Nossas <span class="blue-span">Excursões</span></h2>
-
-            <div class="grid-container">
+        <section class="trips-section">
+            <div class="grid-trips">
                 <div class="card" id="morro-branco">
                     <img src="./assets/img/morro-branco.png" alt="Praia de Morro Branco">
-                    <h2 class="card-title">Morro Branco</h2>
-                    <p class="card-paragraph">Por Aucimar Excursões</p>
-                    <p class="card-paragraph"><i class="ph-fill ph-star-four"></i>5.0/5.0 estrelas de satisfação</p>
-                    <p class="card-paragraph">Em 10 parcelas de</p>
-                    <p class="card-price">R$ 99,90 Sem Juros</p>
-                    <p class="card-paragraph">(para 2 pessoas)</p>
-                    <a href="" class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</a>
+                    <h3>Morro Branco</h3>
+                    <p>Por Aucimar Excursões</p>
+                    <p><i class="ph-fill ph-star-four"></i>5.0/5.0 estrelas de satisfação</p>
+                    <p>Em 10 parcelas de</p>
+                    <p class="card-price">R$ 99,90</p>
+                    <p>Sem Juros (para 2 pessoas)</p>
+                    <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</button>
                 </div>
                 <div class="card" id="morro-branco">
-                    <img src="./assets/img/praia-do-futuro.jpg" alt="Praia de Morro Branco">
-                    <h2 class="card-title">Morro Branco</h2>
-                    <p class="card-paragraph">Por Aucimar Excursões</p>
-                    <p class="card-paragraph"><i class="ph-fill ph-star-four"></i>5.0/5.0 estrelas de satisfação</p>
-                    <p class="card-paragraph">Em 10 parcelas de</p>
-                    <p class="card-price">R$ 99,90 Sem Juros</p>
-                    <p class="card-paragraph">(para 2 pessoas)</p>
-                    <a href="" class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</a>
+                    <img src="./assets/img/morro-branco.png" alt="Praia de Morro Branco">
+                    <h3>Morro Branco</h3>
+                    <p>Por Aucimar Excursões</p>
+                    <p><i class="ph-fill ph-star-four"></i>5.0/5.0 estrelas de satisfação</p>
+                    <p>Em 10 parcelas de</p>
+                    <p class="card-price">R$ 99,90</p>
+                    <p>Sem Juros (para 2 pessoas)</p>
+                    <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</button>
                 </div>
                 <div class="card" id="morro-branco">
-                    <img src="./assets/img/arajara-park.png" alt="Praia de Morro Branco">
-                    <h2 class="card-title">Morro Branco</h2>
-                    <p class="card-paragraph">Por Aucimar Excursões</p>
-                    <p class="card-paragraph"><i class="ph-fill ph-star-four"></i>5.0/5.0 estrelas de satisfação</p>
-                    <p class="card-paragraph">Em 10 parcelas de</p>
-                    <p class="card-price">R$ 99,90 Sem Juros</p>
-                    <p class="card-paragraph">(para 2 pessoas)</p>
-                    <a href="" class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</a>
+                    <img src="./assets/img/morro-branco.png" alt="Praia de Morro Branco">
+                    <h3>Morro Branco</h3>
+                    <p>Por Aucimar Excursões</p>
+                    <p><i class="ph-fill ph-star-four"></i>5.0/5.0 estrelas de satisfação</p>
+                    <p>Em 10 parcelas de</p>
+                    <p class="card-price">R$ 99,90</p>
+                    <p>Sem Juros (para 2 pessoas)</p>
+                    <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</button>
                 </div>
             </div>
         </section>
@@ -135,6 +132,5 @@
             </span>
         </div>
     </footer>
-    -->
 </body>
 </html>
