--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
            
         <section class="planning-section">
             <h2>Planejar a sua viagem com <br/><span class="blue-span">a Onitour é fácil</span></h2>
-            <div class="grid-container">
+            <div class="grid-planning">
                 <div>
                     <span class="green-icon">
                         <i class="ph-fill ph-map-pin-area"></i>
