css grid + responsiviness + menu adjustments

--- a/detalhes.html
+++ b/detalhes.html
@@ -49,37 +49,113 @@
         </section>
 
         <section class="trips-section">
-            <div class="grid-trips">
-                <div class="card" id="morro-branco">
-                    <img src="./assets/img/morro-branco.png" alt="Praia de Morro Branco">
-                    <h3>Morro Branco</h3>
-                    <p>Por Aucimar Excursões</p>
-                    <p><i class="ph-fill ph-star-four"></i>5.0/5.0 estrelas de satisfação</p>
-                    <p>Em 10 parcelas de</p>
-                    <p class="card-price">R$ 99,90</p>
-                    <p>Sem Juros (para 2 pessoas)</p>
-                    <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</button>
-                </div>
-                <div class="card" id="morro-branco">
-                    <img src="./assets/img/morro-branco.png" alt="Praia de Morro Branco">
-                    <h3>Morro Branco</h3>
-                    <p>Por Aucimar Excursões</p>
-                    <p><i class="ph-fill ph-star-four"></i>5.0/5.0 estrelas de satisfação</p>
-                    <p>Em 10 parcelas de</p>
-                    <p class="card-price">R$ 99,90</p>
-                    <p>Sem Juros (para 2 pessoas)</p>
-                    <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</button>
-                </div>
-                <div class="card" id="morro-branco">
-                    <img src="./assets/img/morro-branco.png" alt="Praia de Morro Branco">
-                    <h3>Morro Branco</h3>
-                    <p>Por Aucimar Excursões</p>
-                    <p><i class="ph-fill ph-star-four"></i>5.0/5.0 estrelas de satisfação</p>
-                    <p>Em 10 parcelas de</p>
-                    <p class="card-price">R$ 99,90</p>
-                    <p>Sem Juros (para 2 pessoas)</p>
-                    <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</button>
-                </div>
+            <div class="card" id="morro-branco">
+                <img src="./assets/img/morro-branco.png" alt="Praia de Morro Branco">
+                <h3>Morro Branco</h3>
+                <p>Por Aucimar Excursões</p>
+                <p><i class="ph-fill ph-star-four"></i>5.0/5.0 estrelas de satisfação</p>
+                <p>Em 10 parcelas de</p>
+                <p class="card-price">R$ 99,90</p>
+                <p>Sem Juros (para 2 pessoas)</p>
+                <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</button>
+            </div>
+            <div class="card" id="praia-do-futuro">
+                <img src="./assets/img/praia-do-futuro.jpg" alt="Praia do Futuro">
+                <h3>Praia do Futuro</h3>
+                <p>Por VIP Transporte e Turismo</p>
+                <p><i class="ph-fill ph-star-four"></i>4.8/5.0 estrelas de satisfação</p>
+                <p>Em 10 parcelas de</p>
+                <p class="card-price">R$ 89,90</p>
+                <p>Sem Juros (para duas pessoas)</p>
+                <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</button>
+            </div>
+
+            <div class="card" id="arajara-park">
+                <img src="./assets/img/arajara-park.png" alt="Arajara Park - Day Use">
+                <h3>Arajara Park - Day Use</h3>
+                <p>Por Neto Turismo</p>
+                <p><i class="ph-fill ph-star-four"></i>4.9/5.0 estrelas de satisfação</p>
+                <p>Em 10 parcelas de</p>
+                <p class="card-price">R$ 69,90</p>
+                <p>Sem Juros (para duas pessoas)</p>
+                <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</button>
+            </div>
+
+            <div class="card" id="canion-rio-poti">
+                <img src="./assets/img/canion-poti.jpg" alt="Cânion do Rio Poti">
+                <h3>Cânion do Rio Poti</h3>
+                <p>Por Sertão Adventure</p>
+                <p><i class="ph-fill ph-star-four"></i>4.9/5.0 estrelas de satisfação</p>
+                <p>Em 10 parcelas de</p>
+                <p class="card-price">R$ 129,90</p>
+                <p>Sem Juros (para duas pessoas)</p>
+                <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</button>
+            </div>
+
+            <div class="card" id="canoa-quebrada">
+                <img src="./assets/img/canoa-quebrada.jpg" alt="Praia de Canoa Quebrada">
+                <h3>Praia de Canoa Quebrada</h3>
+                <p>Por Brisa Turismo</p>
+                <p><i class="ph-fill ph-star-four"></i>5.0/5.0 estrelas de satisfação</p>
+                <p>Em 10 parcelas de</p>
+                <p class="card-price">R$ 109,90</p>
+                <p>Sem Juros (para duas pessoas)</p>
+                <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</button>
+            </div>
+
+            <div class="card" id="ubajara-teleferico">
+                <img src="./assets/img/ubajara-teleferico.png" alt="Ubajara Teleférico">
+                <h3>Ubajara Teleférico</h3>
+                <p>Por Ubajara Tur**</p>
+                <p><i class="ph-fill ph-star-four"></i>4.8/5.0 estrelas de satisfação</p>
+                <p>Em 10 parcelas de</p>
+                <p class="card-price">R$ 79,90</p>
+                <p>Sem Juros (para duas pessoas)</p>
+                <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</button>
+            </div>
+
+            <div class="card" id="delta-do-parnaiba">
+                <img src="./assets/img/delta-do-parnaiba.jpg" alt="Passeio Delta do Parnaíba">
+                <h3>Passeio Delta do Parnaíba</h3>
+                <p>Por Nordeste Roteiros</p>
+                <p><i class="ph-fill ph-star-four"></i>4.7/5.0 estrelas de satisfação</p>
+                <p>Em 10 parcelas de</p>
+                <p class="card-price">R$ 149,90</p>
+                <p>Sem Juros (para três pessoas)</p>
+                <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</button>
+            </div>
+
+            <div class="card" id="beach-park">
+                <img src="./assets/img/beach-park.jpg" alt="Beach Park - Day Use">
+                <h3>Beach Park – Day Use</h3>
+                <p>Por VIP Transporte & Turismo**</p>
+                <p><i class="ph-fill ph-star-four"></i>4.9/5.0 estrelas de satisfação</p>
+                <p>Em 10 parcelas de</p>
+                <p class="card-price">R$ 159,90</p>
+                <p>Sem Juros (para duas pessoas)</p>
+                <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</button>
+            </div>
+
+            <div class="card" id="serra-guaramiranga">
+                <img src="./assets/img/guaramiranga.webp" alt="Trilha na Serra de Guaramiranga">
+                <h3>Trilha na Serra de Guaramiranga</h3>
+                <p>Por EcoTrip Ceará</p>
+                <p><i class="ph-fill ph-star-four"></i>4.6/5.0 estrelas de satisfação</p>
+                <p>Em 10 parcelas de</p>
+                <p class="card-price">R$ 69,90</p>
+                <p>Sem Juros (para até quatro pessoas)</p>
+                <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</button>
+            </div>
+
+            <div class="card" id="buggy-jericoacoara">
+                <img src="./assets/img/jericoacoara.jpg" alt="Passeio de Buggy em Jericoacoara">
+                <h3>Passeio de Buggy em Jericoacoara</h3>
+                <p>Por Jeri Adventure</p>
+                <p><i class="ph-fill ph-star-four"></i>5.0/5.0 estrelas de satisfação</p>
+                <p>Em 10 parcelas de</p>
+                <p class="card-price">R$ 189,90</p>
+                <p>Sem Juros (para duas pessoas)</p>
+                <button class="touristing-button"><img src="./assets/img/logo-white-no-text.svg"> Touristar</button>
             </div>
         </section>
     </main>
