adicionado bottom menu para mobile

--- a/detalhes.html
+++ b/detalhes.html
@@ -31,11 +31,21 @@
         </nav>
 
         <div>
-            <i class="ph-fill ph-dots-three-outline-vertical" id="menu-icon"></i>
+            <!-- <i class="ph-fill ph-dots-three-outline-vertical" id="menu-icon"></i> -->
             <i class="ph-fill ph-user-circle" id="login-icon"></i>
         </div>
     </header>
 
+    <div id="mobile-menu-options">
+        <nav class="mobile-menu-nav">
+            <ul>
+                <li><a href="./detalhes.html">Excursões</a></li>
+                <li><a href="#">Aluguéis</a></li>
+                <li><a href="#">Hospedagem</a></li>
+            </ul>
+        </nav>
+    </div>
+    
     <main>
         <section class="menu-section">
             <nav class="top-menu">
