--- a/index.html
+++ b/index.html
@@ -31,10 +31,22 @@
         </nav>
 
         <div>
-            <i class="ph-fill ph-dots-three-outline-vertical" id="menu-icon"></i>
+            <!-- <i class="ph-fill ph-dots-three-outline-vertical" id="menu-icon"> -->
+            </i>
             <i class="ph-fill ph-user-circle" id="login-icon"></i>
+            
         </div>
     </header>
+
+    <div id="mobile-menu-options">
+        <nav class="mobile-menu-nav">
+            <ul>
+                <li><a href="./detalhes.html">Excursões</a></li>
+                <li><a href="#">Aluguéis</a></li>
+                <li><a href="#">Hospedagem</a></li>
+            </ul>
+        </nav>
+    </div>
 
     <main>
         <section class="hero-section">
