--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 </head>
 <body>
     <header id="inicio">
-        <div>
+        <a href="./index.html">
             <img src="./assets/img/logo-colored-no-text.svg" alt="Logo da Onitour">
             <h1><span class="blue-span">ONI</span>TOUR</h1>
-        </div>
+        </a>
 
         <nav>
             <ul>
