--- a/detalhes.html
+++ b/detalhes.html
@@ -17,10 +17,10 @@
 </head>
 <body>
     <header id="inicio">
-        <div>
+        <a href="./index.html">
             <img src="./assets/img/logo-colored-no-text.svg" alt="Logo da Onitour">
             <h1><span class="blue-span">ONI</span>TOUR</h1>
-        </div>
+        </a>
 
         <nav>
             <ul>
@@ -177,7 +177,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#inicio">Início</a>
+                        <a href="./index.html">Início</a>
                     </li>
                     <li>
                         <a href="./detalhes.html">Excursões</a>
