--- a/index.html
+++ b/index.html
@@ -29,13 +29,8 @@
                 <li><a href="#">Hospedagem</a></li>
             </ul>
         </nav>
-
-        <div>
-            <!-- <i class="ph-fill ph-dots-three-outline-vertical" id="menu-icon"> -->
-            </i>
-            <i class="ph-fill ph-user-circle" id="login-icon"></i>
-            
-        </div>
+        
+        <i class="ph-fill ph-user-circle" id="login-icon"></i>
     </header>
 
     <div id="mobile-menu-options">
@@ -133,7 +128,7 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#inicio">Início</a>
+                        <a href="./index.html">Início</a>
                     </li>
                     <li>
                         <a href="./detalhes.html">Excursões</a>
